[gd_scene load_steps=4 format=1]

[ext_resource path="res://Scripts/Satelite.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Naves/Satelite.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 30.2502, 27.2106 )

[node name="Satelite" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 120 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 0, 120 )
transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 120 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="Position2D" type="Position2D" parent="."]

transform/pos = Vector2( -38.0369, 119.456 )

[connection signal="body_enter" from="." to="." method="_on_Satelite_body_enter"]

[connection signal="body_exit" from="." to="." method="_on_Satelite_body_exit"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


